# gDebi

./: AUTHORS  BUGS  CONFIG-CHANGES  CREDITS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.NLS  README.gtkrc  TODO  aclocal.m4  changelog  config.h.in  configure  configure.ac  control  copyright  gdebi  gdebi-gtk  gentoo.spec  gentoo.spec.in  gentoorc.in  install  manpages  meson.build  setup.py  setup_version.py  watch
GDebi/: GDebiCommon.py  GDebiGtk.py
data/: gdebi.desktop.in
debian/: changelog  control  copyright  dirs  doc-base  gbp.conf  gdebi-core.install  gdebi.install  gentoo.desktop  not-installed  rules
debian/patches/: changed-default-dir-icons.patch  dpkg-buildflags.patch  fix-cross-building-by-using-ac_check_siz.patch  series  srcmakefile.am-do-not-embed-the-build-us.patch
docs/: FAQ  acks.html  buttons.html  columns.html  commands.html  contribute.html  dirpanes.html  gentoo.1x  gentoo.css  gpl.html  history.html  index.bt  index.html  intro.html  layout.html  menus.html  menus.txt  misc.html  quick.html  status.html  styles.html  template.html  template_toc.html  types.html  usage.html
docs/config/: cfg_dirpane.html  cfg_gui.html  cfg_styles.html  cfg_types.html  gentoorc.html  index.html  template.html
docs/scratch/: README  command_args.txt  command_howto.txt  command_options.txt  commands.txt  dirhistory.txt  filestyles.txt  filetypes.txt  focusing.txt  mount.txt  outline.txt  renamere.txt  search_howto.txt  symlinks.txt
icons/: Makefile  Makefile.am  Makefile.in  py.xpm
m4/: Makefile.am  Makefile.in  intl.m4
patches/: change-config-directory-files.patch
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  an.po  ar.po  ast.po  bg.po  bn.po  bs.po  ca.gmo  ca.po  ca@valencia.po  cs.po  da.po  de.gmo  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.gmo  es.po  es_MX.gmo  es_MX.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.gmo  fr.po  gdebi.pot  gl.po  he.po  hr.po  hu.po  hy.po  id.po  (+47 more)
release_tests/: test_pyflakes.py
src/: Makefile.am  Makefile.in  buttonlayout.c  buttonlayout.h  buttons.c  buttons.h  cfg_buttonlayout.c  cfg_buttonlayout.h  cfg_buttons.c  cfg_buttons.h  cfg_cmdcfg.c  cfg_cmdcfg.h  cfg_cmdseq.c  cfg_cmdseq.h  cfg_controls.c  cfg_controls.h  cfg_dialogs.c  cfg_dialogs.h  cfg_dirpane.c  cfg_dirpane.h  cfg_errors.c  cfg_errors.h  cfg_menus.c  cfg_menus.h  cfg_module.h  cfg_nag.c  cfg_nag.h  cfg_paths.c  cfg_paths.h  cfg_styles.c  cfg_styles.h  cfg_types.c  cfg_types.h  cfg_windows.c  cfg_windows.h  children.c  children.h  cmd_about.c  cmd_about.h  cmd_activate.c  (+150 more)
src/graphics/: README  icon_empty.xpm  icon_failed.xpm  icon_gentoo.c  icon_gentoo.xpm  icon_mouse0.xpm  icon_mouse1.xpm  icon_mouse2.xpm  icon_mouse3.xpm  icon_mouse4.xpm  icon_mouse5.xpm
src/graphics/.xvpics/: icon_gentoo-small.xpm  icon_iconify.xpm
tests/: test_gdebi_gtk_lintian.py
