# -----------------------------------------------------------------------------
# gentoo icons makefile
# -----------------------------------------------------------------------------

pixmapdir=$(datadir)/gentoo/icons
pixmap_DATA=AbiWord.xpm \
  Amiga.xpm \
  Animation.xpm \
  Apple.xpm \
  BSD.xpm \
  Bad.xpm \
  Battery.xpm \
  CDROM.xpm \
  Card.xpm \
  Database.xpm \
  Directory.xpm \
  Directory2.xpm \
  Document.xpm \
  EggTimer.xpm \
  ExcelCalcXLS.xpm \
  Executable.xpm \
  FIFO.xpm \
  Floppy.xpm \
  Font.xpm \
  GNUstep.xpm \
  Ghost.xpm \
  GnomeCalc.xpm \
  GnomeWord.xpm \
  Harddrive.xpm \
  Image.xpm \
  Internet.xpm \
  KDECalc.xpm \
  KDEWord.xpm \
  Kernel.xpm \
  Keymap.xpm \
  Lego.xpm \
  License.xpm \
  Linux.xpm \
  MSWordDoc.xpm \
  Makefile.xpm \
  Maya.xpm \
  Mixer.xpm \
  Mouse.xpm \
  Mouse2.xpm \
  NetAmiga.xpm \
  NetApple.xpm \
  NetHD.xpm \
  NetSGI.xpm \
  NetSun.xpm \
  NetWindows.xpm \
  Package.xpm \
  Package2.xpm \
  Port.xpm \
  Port2.xpm \
  PowerButton.xpm \
  Printer.xpm \
  Readme.xpm \
  SCSI.xpm \
  SoundCard.xpm \
  Source.xpm \
  Speaker.xpm \
  Speaker2.xpm \
  Spreadsheet.xpm \
  Tape.xpm \
  VRML.xpm \
  Windows.xpm \
  aiff.xpm \
  au.xpm \
  avi.xpm \
  bmp.xpm \
  bmp2.xpm \
  c.xpm \
  class.xpm \
  conf.xpm \
  core.xpm \
  cpp.xpm \
  deb.xpm \
  eps.xpm \
  exe.xpm \
  gentoo.png \
  gif.xpm \
  gif2.xpm \
  h.xpm \
  html.xpm \
  html2.xpm \
  iff.xpm \
  iff2.xpm \
  java.xpm \
  jpeg.xpm \
  jpeg2.xpm \
  log.xpm \
  m.xpm \
  man.xpm \
  midi.xpm \
  mod.xpm \
  mov.xpm \
  mov2.xpm \
  mp3.xpm \
  mpeg.xpm \
  o.xpm \
  pcx.xpm \
  pcx2.xpm \
  pdb.xpm \
  pdf.xpm \
  pl.xpm \
  png.xpm \
  png2.xpm \
  prc.xpm \
  ps.xpm \
  r.xpm \
  ra.xpm \
  rom.xpm \
  rpm.xpm \
  sh.xpm \
  sid.xpm \
  so.xpm \
  targa.xpm \
  targa2.xpm \
  tex.xpm \
  tiff.xpm \
  tiff2.xpm \
  txt.xpm \
  wav.xpm \
  xbm.xpm \
  xbm2.xpm \
  xcf.xpm \
  xpm.xpm \
  xpm2.xpm
